--- a/form.html
+++ b/form.html
@@ -3,40 +3,73 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Elective Selection Form</title>
-    <link rel="stylesheet" href="style.css">
+    <title>Course Selection Form</title>
 </head>
 <body>
-<div class="container">
-    <header>
-        <h1>Open Elective Selection</h1>
-        <p>Welcome! Please fill out the form below to select your preferred open elective subjects.</p>
-    </header>
-    <section class="form-container">
-        <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdaVLyFpUcCC890Cd_sSRNE3q6pFW8BYj-w7ZTHhCYlwqjp2g/viewform?embedded=true" width="640" height="980" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
-    </section>
+<div class="wrapper">
+    <div class="content">
+        <header>
+            <h1>Open Elective Course Selection</h1>
+            <p>Please fill out the form to select your preferred open elective courses for the upcoming semester.</p>
+        </header>
+        <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdaVLyFpUcCC890Cd_sSRNE3q6pFW8BYj-w7ZTHhCYlwqjp2g/viewform?embedded=true" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
+    </div>
 </div>
 </body>
 <style>
-   .form-container iframe {
-    width: 100%;
-    height: 75vh; /* Adjust based on your preference */
-    border: none;
-    border-radius: 8px;
-    overflow: hidden;
+    body, html {
+    margin: 0;
+    padding: 0;
+    height: 100%;
+    font-family: 'Arial', sans-serif;
+    background: linear-gradient(to right, #6a11cb 0%, #2575fc 100%);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    color: #ffffff;
 }
 
-/* Adjustments for smaller screens */
+.wrapper {
+    width: 90%;
+    max-width: 800px;
+    background: rgba(255, 255, 255, 0.8);
+    border-radius: 8px;
+    overflow: hidden;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.2);
+}
+
+.content {
+    padding: 20px;
+}
+
+header h1 {
+    margin: 0.5em 0;
+}
+
+header p {
+    margin-bottom: 20px;
+}
+
+iframe {
+    width: 100%;
+    height: 600px; /* Adjust based on your content */
+    border: none;
+}
+
 @media screen and (max-width: 768px) {
-    .form-container iframe {
-        height: 85vh; /* Increase the height for smaller devices if needed */
+    iframe {
+        height: 800px;
     }
 }
 
-/* Further adjustments for very small screens */
 @media screen and (max-width: 480px) {
-    .form-container iframe {
-        height: 95vh; /* Adapt for very small screens */
+    .wrapper {
+        width: 95%;
+    }
+
+    iframe {
+        height: 900px;
     }
 }
 
