--- a/form.html
+++ b/form.html
@@ -33,10 +33,9 @@
 .wrapper {
     width: 90%;
     max-width: 800px;
-    background: rgba(255, 255, 255, 0.8);
     border-radius: 8px;
     overflow: hidden;
-    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.2);
+    box-shadow: 0 4px 6px rgba(black);
 }
 
 .content {
