--- a/form.html
+++ b/form.html
@@ -3,74 +3,53 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Course Selection Form</title>
+    <title>Open Elective Selection Form</title>
 </head>
 <body>
-<div class="wrapper">
-    <div class="content">
-        <header>
-            <h1>Open Elective Course Selection</h1>
-            <p>Please fill out the form to select your preferred open elective courses for the upcoming semester.</p>
-        </header>
-        <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdaVLyFpUcCC890Cd_sSRNE3q6pFW8BYj-w7ZTHhCYlwqjp2g/viewform?embedded=true" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
-    </div>
+<div class="container">
+    <h1>Elective Selection Form</h1>
+    <p>Please complete the form below to select your electives.</p>
+    <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdaVLyFpUcCC890Cd_sSRNE3q6pFW8BYj-w7ZTHhCYlwqjp2g/viewform?embedded=true" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
 </div>
 </body>
+</html>
 <style>
     body, html {
     margin: 0;
     padding: 0;
     height: 100%;
     font-family: 'Arial', sans-serif;
-    background: linear-gradient(to right, #6a11cb 0%, #2575fc 100%);
+    background: #f4f4f4; /* Plain background */
     display: flex;
     justify-content: center;
     align-items: center;
     text-align: center;
-    color: #ffffff;
+    color: #333;
 }
 
-.wrapper {
+.container {
     width: 90%;
-    max-width: 800px;
-    border-radius: 8px;
-    overflow: hidden;
-    box-shadow: 0 4px 6px rgba(black);
-}
-
-.content {
+    max-width: 700px;
+    margin: 20px auto;
     padding: 20px;
-}
-
-header h1 {
-    margin: 0.5em 0;
-}
-
-header p {
-    margin-bottom: 20px;
+    background: #fff; /* White background for the form container */
+    border-radius: 8px;
+    box-shadow: 0 2px 4px rgba(0,0,0,0.1);
 }
 
 iframe {
     width: 100%;
-    height: 600px; /* Adjust based on your content */
+    height: 650px; /* Adjust based on your form's length */
     border: none;
+    margin-top: 20px;
 }
 
-@media screen and (max-width: 768px) {
-    iframe {
-        height: 800px;
-    }
+h1 {
+    color: #333;
 }
 
-@media screen and (max-width: 480px) {
-    .wrapper {
-        width: 95%;
-    }
-
-    iframe {
-        height: 900px;
-    }
+p {
+    color: #666;
 }
 
 </style>
-</html>
